create event module

--- a/package.json
+++ b/package.json
@@ -11,21 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.4",
-    "@angular/common": "~11.0.4",
-    "@angular/compiler": "~11.0.4",
-    "@angular/core": "~11.0.4",
-    "@angular/forms": "~11.0.4",
-    "@angular/localize": "~11.0.4",
-    "@angular/platform-browser": "~11.0.4",
-    "@angular/platform-browser-dynamic": "~11.0.4",
-    "@angular/router": "~11.0.4",
+    "@agm/core": "*",
+    "@angular/animations": "~10.0.0",
+    "@angular/common": "~10.0.0",
+    "@angular/compiler": "~10.0.0",
+    "@angular/core": "~10.0.0",
+    "@angular/forms": "~10.0.0",
+    "@angular/localize": "~10.0.0",
+    "@angular/platform-browser": "~10.0.0",
+    "@angular/platform-browser-dynamic": "~10.0.0",
+    "@angular/router": "~10.0.0",
     "@progress/kendo-angular-buttons": "^6.0.0",
     "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-dateinputs": "^5.1.0",
     "@progress/kendo-angular-dialog": "^5.0.0",
+    "@progress/kendo-angular-dropdowns": "^5.2.0",
     "@progress/kendo-angular-icons": "^0.4.2",
-    "@progress/kendo-angular-inputs": "^7.2.0",
-    "@progress/kendo-angular-intl": "^3.0.0",
+    "@progress/kendo-angular-inputs": "^7.0.0",
+    "@progress/kendo-angular-intl": "^3.1.0",
     "@progress/kendo-angular-l10n": "^3.0.0",
     "@progress/kendo-angular-label": "^3.0.2",
     "@progress/kendo-angular-layout": "^6.1.4",
@@ -33,18 +36,23 @@
     "@progress/kendo-angular-navigation": "^1.0.0",
     "@progress/kendo-angular-notification": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.0",
-    "@progress/kendo-drawing": "^1.5.12",
-    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-angular-treeview": "^5.0.0",
+    "@progress/kendo-data-query": "^1.5.4",
+    "@progress/kendo-drawing": "^1.9.3",
+    "@progress/kendo-licensing": "^1.1.1",
     "@progress/kendo-theme-default": "^4.37.0",
     "bootstrap": "^4.6.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.2.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.4",
-    "@angular/compiler-cli": "~11.0.4",
+    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular/cli": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
+    "@types/googlemaps": "3.39.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -58,6 +66,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~3.9.5"
   }
 }
