--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bootstrap": "^4.6.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
+    "ngx-stars": "^1.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.10.2"
