--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@progress/kendo-angular-buttons": "^6.0.0",
+    "@progress/kendo-angular-charts": "^5.2.0",
     "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-dateinputs": "^5.1.0",
     "@progress/kendo-angular-dialog": "^5.0.0",
@@ -39,10 +40,10 @@
     "@progress/kendo-angular-popup": "^4.0.0",
     "@progress/kendo-angular-treeview": "^5.0.0",
     "@progress/kendo-data-query": "^1.5.4",
-    "@progress/kendo-drawing": "^1.9.3",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "^4.37.0",
     "bootstrap": "^4.6.0",
+    "hammerjs": "^2.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "ngx-stars": "^1.5.1",
