--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@progress/kendo-angular-dateinputs": "^5.1.0",
     "@progress/kendo-angular-dialog": "^5.0.0",
     "@progress/kendo-angular-dropdowns": "^5.2.0",
+    "@progress/kendo-angular-excel-export": "^4.0.1",
     "@progress/kendo-angular-icons": "^0.4.2",
     "@progress/kendo-angular-indicators": "^1.0.0",
     "@progress/kendo-angular-inputs": "^7.0.0",
