--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-dateinputs": "^5.1.0",
     "@progress/kendo-angular-dialog": "^5.0.0",
-    "@progress/kendo-angular-dropdowns": "^5.2.0",
+    "@progress/kendo-angular-dropdowns": "^5.0.0",
     "@progress/kendo-angular-excel-export": "^4.0.1",
     "@progress/kendo-angular-icons": "^0.4.2",
     "@progress/kendo-angular-indicators": "^1.0.0",
@@ -38,10 +38,12 @@
     "@progress/kendo-angular-menu": "^3.0.1",
     "@progress/kendo-angular-navigation": "^1.0.0",
     "@progress/kendo-angular-notification": "^3.0.0",
+    "@progress/kendo-angular-pager": "^2.0.1",
     "@progress/kendo-angular-popup": "^4.0.0",
     "@progress/kendo-angular-scrollview": "^4.0.3",
     "@progress/kendo-angular-treeview": "^5.0.0",
     "@progress/kendo-data-query": "^1.5.4",
+    "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "^4.37.0",
     "bootstrap": "^4.6.0",
