--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "moment-timezone"
+            ],
             "outputPath": "dist/keep-it-clean-ui",
             "index": "src/index.html",
             "main": "src/main.ts",
