--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@progress/kendo-angular-pager": "^2.0.1",
     "@progress/kendo-angular-pdf-export": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-angular-progressbar": "^2.0.1",
     "@progress/kendo-angular-scrollview": "^4.0.3",
     "@progress/kendo-angular-treeview": "^5.0.0",
     "@progress/kendo-data-query": "^1.0.0",
