--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.0.0",
     "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-svg-icons": "^0.1.2",
     "@progress/kendo-theme-default": "^4.37.0",
     "bootstrap": "^4.6.0",
     "hammerjs": "^2.0.0",
